# CellType-Refinery

./: .gitignore  404.html  README.md  docs.html  index.html  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml
assets/css/: styles.be0b7b16.css
assets/js/: 009f1e98.c3f60681.js  045598eb.0a813f3b.js  07108247.deeab562.js  0ce2e311.ecb83e96.js  0e384e19.14450ca2.js  0e384e19.7efcaccc.js  1000.85e40a09.js  1169.dd9c932f.js  1203.ae445df3.js  12269a07.44c83392.js  12269a07.cdb71acb.js  15155374.d95e7ed4.js  15ada92c.00797d70.js  165.bfc6939b.js  1741.44a8bc84.js  1746.53488abc.js  17896441.43e22f61.js  187c4db6.47ab055a.js  1b7b8f70.10c7e0b4.js  1b7b8f70.950b7d4b.js  1d01b8e0.9a831367.js  1dbfbb84.7d016c97.js  1fbc4085.e0a052b1.js  1fbe28c6.994f50a8.js  202286b7.31572025.js  202286b7.53042ca2.js  2130.a053acb0.js  2291.77daf482.js  2325.386b2995.js  2492.4360464d.js  2498f440.b556e868.js  256c9132.ba618a67.js  2821.7414f463.js  2860406f.1e589d76.js  28a7eb55.68a17da7.js  291.f97d14e5.js  2c1aff2f.29f1a4a0.js  2fc12cd8.62f06bad.js  2fc12cd8.736812b3.js  3042.0b3bfb70.js  (+101 more)
celltype-refinery-docs/: CLAUDE.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
celltype-refinery-docs/docs/: intro.md
celltype-refinery-docs/docs/cli/: analyze.md  annotate.md  cluster.md  consolidate.md  overview.md  pipeline.md  preprocess.md  refine.md
celltype-refinery-docs/docs/configuration/: marker-maps.md  pipeline-yaml.md  refinement-yaml.md  tissue-templates.md
celltype-refinery-docs/docs/core-workflows/: automated-workflow.md  expert-curation.md  hybrid-workflow.md  iterative-refinement.md  workflow-overview.md
celltype-refinery-docs/docs/examples/: custom-tissue.md  fallopian-tube.md
celltype-refinery-docs/docs/getting-started/: configuration.md  first-annotation.md  installation.md  quickstart.md
celltype-refinery-docs/docs/methodology/: annotation-pipeline.md  hierarchical-gating-algorithm.md  index.md  (+3 more)
celltype_refinery/: __init__.py
celltype_refinery/cli/: __init__.py  main.py
celltype_refinery/config/: __init__.py  organ.py
celltype_refinery/core/: __init__.py
celltype_refinery/io/: __init__.py  csv.py  logging.py
celltype_refinery/pipeline/: __init__.py  config.py  executor.py  logger.py  stage.py
celltype_refinery/utils/: __init__.py  stats.py
celltype_refinery/viz/: __init__.py
configs/tissues/: fallopian_tube.yaml  review_template.yaml  template.yaml  uterus.yaml
docs/: DOCUMENTATION_PLAN.md  FEATURE_REQUESTS.md  methodology.html  stage_h.md
docs/cli/: analyze.html  annotate.html  cluster.html  consolidate.html  overview.html  pipeline.html  preprocess.html  refine.html
docs/configuration/: marker-maps.html  pipeline-yaml.html  refinement-yaml.html  tissue-templates.html
docs/core-workflows/: automated-workflow.html  expert-curation.html  hybrid-workflow.html  iterative-refinement.html  workflow-overview.html
docs/examples/: custom-tissue.html  fallopian-tube.html
docs/getting-started/: configuration.html  first-annotation.html  installation.html  quickstart.html
docs/methodology/: annotation-pipeline.html  hierarchical-gating-algorithm.html  marker-scoring-algorithm.html  refinement-decision-logic.html  tuning-guide.html
docs/reference/: glossary.html  output-files.html
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  mock_adata.py
tests/unit/: __init__.py  test_clustering.py  test_pipeline.py  test_preprocessing.py
(+217 files in other folders)
